Финальное задание первого модуля, 2 отправка