@@ -2,22 +2,23 @@ package com.yandex.tracker.service;
 
 import com.yandex.tracker.model.Task;
 
-import java.util.ArrayList;
+import java.util.LinkedList;
 import java.util.List;
 
 public class InMemoryHistoryManager implements HistoryManager {
-    private final List<Task> history = new ArrayList<>();
+    private static final int MAX_SIZE = 10;
+    private final LinkedList<Task> history = new LinkedList<>();
 
     @Override
     public void add(Task task) {
-        if (history.size() >= 10) {
-            history.remove(0); // Удаляем самый старый элемент
+        if (history.size() >= MAX_SIZE) {
+            history.removeFirst();
         }
         history.add(task);
     }
 
     @Override
     public List<Task> getHistory() {
-        return history;
+        return new LinkedList<>(history);
     }
 }
